src/css/main.css
@import "whether-widget.css";
@import "house-item.css";

.main-content {
  flex: 1 0 auto;
  padding-left: 40px;
  margin-top: 92px;
}

.main-widget {
  display: flex;
  flex-direction: column;
  width: 630px;
  height: 331px;
  background-image: url("../assets/bg@1x.png");
  background-image: -webkit-image-set(
      url("../assets/bg@1x.png") 1x,
      url("../assets/bg@2x.png") 2x
  );
  background-repeat: no-repeat;
  background-position: 40% 50%;
  background-clip: border-box;
  border-radius: 20px;
  min-width: 285px;
}

.main-section {
  margin: 30px 0;
}

#main {
  margin-right: 26px;
}

#featured-scenarios {
  width: 100%;
  margin-right: 40px;
}

#featured-devices {

}

.main-content__first-line {
  display: flex;
}

.main-section__header {
 margin-bottom: 20px;
}

.section-header__name {
  font-weight: bold;
  font-size: 18px;
  color: #333333;
}

.pagination {
}

.info-pane {
  padding: 26px 0 0 25px;
}

.info-pane__greetings {
  font-weight: bold;
  font-size: 27px;
  line-height: 1.4;
  color: #333333;
}

.info-pane__status {
  font-size: 14px;
  color: #333333;
}

.flex__justify_space-between {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.pagination__arrow {
  cursor: pointer;
  filter: opacity(0.3);
  transition: .15s ease-out;
}

.pagination__arrow:hover {
  filter: opacity(1);
}

.arrow_direction_left {
  padding-left: 15px;
  transform: rotate(180deg);
}

.arrow_direction_right {
  transform: rotate(0deg);
}

.scenarios-pane {
  display: grid;
  grid-template-columns: repeat(auto-fit, 200px);
  grid-auto-rows: 100px;
  grid-gap: 15px 15px;
}

.filter-menu {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;

  font-weight: bold;
  font-size: 13px;
  color: #000000;
  text-align: left;
}

.filter-menu__item {
  margin: 0 5px;
  padding: 8px 15px;
  border-radius: 20px;

  list-style-type: none;
  cursor: pointer;
  transition: 0.15s ease-out;
}

.filter-menu__item:hover {
  background-color: #FFCD00;
}

.filter-menu__item_selected_true {
  background-color: #FFD93E;
}

